<resources>
    <string name="app_name">ZhiYe</string>
    <string name="title_zhihu">ZhiHuDaily</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings_notifications">Notifications</string>

    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">This application is not yet complete!</string>

    <string name="news_image_preview">Image Preview</string>
    <string name="zhihu_question_link_prefix">http://www.zhihu.com/question/</string>
    <string name="title_activity_zhihu_web">News</string>
    <string name="action_title_settings">Settings</string>
    <string name="action_title_share">Share</string>
    <string name="action_title_collect">Collect</string>
    <string name="action_read_later">Read Later</string>
    <string name="the_left_brace">【</string>
    <string name="the_right_brace">】</string>
    <string name="action_title_open_browser">Use The Browser Open</string>
    <string name="action_title_open_zhihu">Use The Zhihu Client Open</string>
    <string name="load_failure">Load Failure</string>
    <string name="zhihu_daily_today">Zhihu Daily</string>
    <string name="title_read_later">Read Later</string>
    <string name="no_zhihu_client">Not Found The Zhihu Client</string>
    <string name="test_text">TEST TEXT</string>
    <string name="action_mark_as_unread">Mark As Unread</string>
    <string name="action_marked_as_unread">Marked As Unread</string>
    <string name="added_read_later">Has been added to Read Later</string>
    <string name="undo">Undo</string>
    <string name="removed_read_later">Has been removed from Read Later</string>
    <string name="not_coming">That day has not come yet!</string>
    <string name="not_born">Zhihu Daily not born that day!</string>
    <string name="title_pick_date">Pick Date</string>
    <string name="back">back</string>
    <string name="ramdom_data">Random Selection</string>
    <string name="title_themes">Daily Themes</string>
    <string name="title_editor">Editor</string>
    <string name="multiple_picture">Multi-Images</string>
    <string name="action_title_read_later">Read Later</string>
    <string name="title_read_later_empty">Read Later Empty</string>
    <string name="title_settings_general_setting">General Settings</string>
    <string name="auto_refresh_summary">Auto refresh when this app is launched?</string>
    <string name="title_settings_auto_refresh">Auto Refresh</string>
    <string name="title_settings_others">Others</string>
    <string name="title_settings_others_about">About</string>
    <string name="title_settings_feedback">Feedback</string>
    <string name="communicate_text">Help and Feedback</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="title_search">Search</string>
    <string name="start">Start</string>
    <string name="retry">Retry</string>
    <string name="colorful_summary">Use colorful navigation and title bar(need to restart)</string>
    <string name="title_settings_colorful">Colorful Life</string>
    <string name="notification_summary">Show unread numbers on the bottom navigation</string>
</resources>
