<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_list_card_view"
    style="@style/AppThemeCardView"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            tools:src="@mipmap/ic_launcher"
            android:id="@+id/thumbnail_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:padding="@dimen/view_padding"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/news_image_preview"/>

        <TextView
            tools:text="@string/app_name"
            android:id="@+id/question_title"
            android:textSize="@dimen/list_text_max_size"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/view_padding"
            android:layout_toEndOf="@id/thumbnail_image"/>

        <TextView
            android:id="@+id/daily_title"
            tools:text="@string/app_name"
            android:textSize="@dimen/list_text_min_size"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/thumbnail_image"
            android:layout_below="@id/question_title"
            android:padding="@dimen/view_padding"/>

        <LinearLayout
            android:layout_below="@id/thumbnail_image"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="@dimen/view_padding"
                android:id="@+id/share_image_view"
                android:src="@drawable/ic_action_share"
                android:layout_width="@dimen/action_size"
                android:layout_height="@dimen/action_size"
                android:contentDescription="@string/action_title_share"/>
            <ImageView
                android:padding="@dimen/view_padding"
                android:id="@+id/read_later_image_view"
                android:src="@drawable/ic_action_read_later_unselected"
                android:layout_width="@dimen/action_size"
                android:layout_height="@dimen/action_size"
                android:contentDescription="@string/action_read_later"/>
            <ImageView
                android:padding="@dimen/view_padding"
                android:id="@+id/browser_image_view"
                android:src="@drawable/ic_action_browser"
                android:layout_width="@dimen/action_size"
                android:layout_height="@dimen/action_size"
                android:contentDescription="@string/action_title_open_browser"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>